<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <data>

        <variable
            name="vm"
            type="com.dinhtai.vpstest.ui.home.viewmodel.HomeViewModel" />
    </data>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@android:color/transparent">

        <androidx.core.widget.NestedScrollView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:fillViewport="true"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent">

            <androidx.constraintlayout.widget.ConstraintLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <androidx.appcompat.widget.AppCompatImageView
                    android:id="@+id/img_user"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="@dimen/dp_20"
                    android:layout_marginTop="@dimen/dp_48"
                    android:adjustViewBounds="true"
                    android:background="@drawable/ic_user"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent" />

                <androidx.appcompat.widget.AppCompatTextView
                    android:id="@+id/txt_username"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="@dimen/dp_16"
                    android:text="Nguyễn Thị Thùy Linh"
                    android:textColor="@color/white"
                    android:textSize="@dimen/sp_14"
                    app:layout_constraintStart_toEndOf="@+id/img_user"
                    app:layout_constraintTop_toTopOf="@+id/img_user" />

                <androidx.appcompat.widget.AppCompatTextView
                    android:id="@+id/txt_account_number"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="@dimen/dp_4"
                    android:text="TK   2051931"
                    android:textColor="@color/white"
                    android:textSize="@dimen/sp_12"
                    app:layout_constraintStart_toEndOf="@+id/img_user"
                    app:layout_constraintStart_toStartOf="@+id/txt_username"
                    app:layout_constraintTop_toBottomOf="@+id/txt_username" />

                <androidx.appcompat.widget.AppCompatImageView
                    android:id="@+id/img_qr_code"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginEnd="@dimen/dp_20"
                    android:src="@drawable/ic_qr_code"
                    app:layout_constraintBottom_toBottomOf="@+id/img_user"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintTop_toTopOf="@+id/img_user" />

                <androidx.constraintlayout.widget.ConstraintLayout
                    android:id="@+id/layout_money"
                    android:layout_width="0dp"
                    android:layout_height="54dp"
                    android:layout_marginHorizontal="@dimen/dp_20"
                    android:layout_marginTop="@dimen/dp_11"
                    android:background="@drawable/shape_money_background"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/txt_account_number">

                    <androidx.appcompat.widget.AppCompatImageView
                        android:id="@+id/img_up"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="@dimen/dp_10"
                        android:src="@drawable/ic_up"
                        app:layout_constraintBottom_toBottomOf="parent"
                        app:layout_constraintStart_toStartOf="parent"
                        app:layout_constraintTop_toTopOf="parent" />

                    <androidx.appcompat.widget.AppCompatTextView
                        android:id="@+id/txt_money"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="@dimen/dp_10"
                        android:layout_marginTop="@dimen/dp_9"
                        android:layout_marginBottom="@dimen/dp_7"
                        android:lineSpacingExtra="38dp"
                        android:text="5,869,000,000"
                        android:textColor="@color/white"
                        android:textSize="@dimen/sp_28"
                        app:layout_constraintBottom_toBottomOf="parent"
                        app:layout_constraintStart_toEndOf="@+id/img_up"
                        app:layout_constraintTop_toTopOf="parent" />

                    <androidx.appcompat.widget.AppCompatImageView
                        android:id="@+id/img_hide_money"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="@dimen/dp_11"
                        android:src="@drawable/ic_eye"
                        app:layout_constraintBottom_toBottomOf="parent"
                        app:layout_constraintEnd_toStartOf="@+id/img_next"
                        app:layout_constraintHorizontal_bias="0"
                        app:layout_constraintStart_toEndOf="@+id/txt_money"
                        app:layout_constraintTop_toTopOf="parent" />

                    <androidx.appcompat.widget.AppCompatImageView
                        android:id="@+id/img_next"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginEnd="@dimen/dp_11"
                        android:src="@drawable/ic_arrow_right"
                        app:layout_constraintBottom_toBottomOf="parent"
                        app:layout_constraintEnd_toEndOf="parent"
                        app:layout_constraintTop_toTopOf="parent" />
                </androidx.constraintlayout.widget.ConstraintLayout>

                <androidx.constraintlayout.widget.ConstraintLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="@dimen/dp_12"
                    android:background="@drawable/shape_bottom_background"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/layout_money"
                    app:layout_constraintVertical_bias="0.0"
                    tools:layout_editor_absoluteX="0dp">

                    <androidx.recyclerview.widget.RecyclerView
                        android:id="@+id/recycler_product"
                        setShortProducts="@{vm.products}"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="@dimen/dp_25"
                        android:foregroundGravity="center"
                        app:layoutManager="androidx.recyclerview.widget.GridLayoutManager"
                        app:layout_constraintTop_toTopOf="parent"
                        app:spanCount="4"
                        tools:itemCount="8"
                        tools:listitem="@layout/item_product" />

                    <androidx.appcompat.widget.AppCompatTextView
                        android:id="@+id/text_title_function"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="@dimen/dp_20"
                        android:layout_marginTop="@dimen/dp_28"
                        android:text="@string/featured_function"
                        android:textColor="@color/eerieBlack"
                        android:textSize="@dimen/sp_17"
                        android:textStyle="bold"
                        app:layout_constraintStart_toStartOf="parent"
                        app:layout_constraintTop_toBottomOf="@+id/recycler_product" />

                    <androidx.recyclerview.widget.RecyclerView
                        android:id="@+id/recycler_function"
                        setBanners="@{vm.banners}"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:orientation="horizontal"
                        app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"
                        app:layout_constraintTop_toBottomOf="@+id/text_title_function"
                        tools:itemCount="8"
                        tools:listitem="@layout/item_banner" />

                    <androidx.appcompat.widget.AppCompatTextView
                        android:id="@+id/text_title_service"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="@dimen/dp_31"
                        android:text="@string/register_service"
                        android:textColor="@color/eerieBlack"
                        android:textSize="@dimen/sp_17"
                        android:textStyle="bold"
                        app:layout_constraintStart_toStartOf="@+id/text_title_function"
                        app:layout_constraintTop_toBottomOf="@+id/recycler_function" />

                    <androidx.appcompat.widget.AppCompatTextView
                        android:id="@+id/text_title_swap"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="@dimen/dp_31"
                        android:layout_marginEnd="@dimen/dp_22"
                        android:text="@string/swap"
                        android:textColor="@color/robinEggBlue"
                        android:textSize="@dimen/sp_13"
                        android:textStyle="bold"
                        app:layout_constraintEnd_toEndOf="parent"
                        app:layout_constraintTop_toBottomOf="@+id/recycler_function" />

                    <androidx.recyclerview.widget.RecyclerView
                        android:id="@+id/recycler_service"
                        setServices="@{vm.services}"
                        android:layout_width="match_parent"
                        android:layout_height="@dimen/dp_110"
                        android:orientation="horizontal"
                        app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"
                        app:layout_constraintEnd_toEndOf="parent"
                        app:layout_constraintHorizontal_bias="0.0"
                        app:layout_constraintStart_toStartOf="parent"
                        app:layout_constraintTop_toBottomOf="@+id/text_title_service"
                        tools:itemCount="8"
                        tools:listitem="@layout/item_service" />

                    <androidx.appcompat.widget.AppCompatImageView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginHorizontal="@dimen/dp_20"
                        android:layout_marginTop="@dimen/dp_19"
                        android:paddingBottom="@dimen/dp_58"
                        android:src="@drawable/banner_advertisement"
                        app:layout_constraintEnd_toEndOf="parent"
                        app:layout_constraintStart_toStartOf="parent"
                        app:layout_constraintTop_toBottomOf="@+id/recycler_service" />

                </androidx.constraintlayout.widget.ConstraintLayout>
            </androidx.constraintlayout.widget.ConstraintLayout>
        </androidx.core.widget.NestedScrollView>
    </androidx.constraintlayout.widget.ConstraintLayout>

</layout>